
 ** WeibullDistribution

 Improvements:
 =============

 ** binolike: accepts frequency vector as third input argument

 ** gevfit: accepts frequency vector as third input argument

 ** gevlike: accepts frequency vector as third input argument

 ** gpfit: accepts frequency vector and requires fixed parameter 'theta'

 ** gplike: accepts frequency vector as third input argument

 ** logl* distribution functions: changed parameters for MATLAB compatibility

 ** hnfit: accepts frequency vector as third input argument

 ** hnlike: accepts frequency vector as third input argument

 ** nbinfit: accepts frequency vector as third input argument

 ** nbinlike: accepts frequency vector as third input argument

 ** tri* distribution functions: swapped the order of b and c input arguments

 ** unidfit: accepts frequency vector as third input argument

 ** unifit: accepts frequency vector as third input argument


 Summary of important user-visible changes for statistics 1.6.5:
-------------------------------------------------------------------

 Important Notice: 1) `mad`, `mean`, `median`, `std`, `var` functions
                      shadow core Octave's respective functions prior
                      to Octave v9.1
                   2) incompatibility with the `nan` package

 Improvements:
 =============

 ** mad/median: correct mad handling of vectors with multiple Infs

 ** PiecewiseLinearDistribution: fix truncated `mean`, `std`, and `var` methods

 ** various fixes to avoid errors when testing the package functions


 Summary of important user-visible changes for statistics 1.6.6:
-------------------------------------------------------------------

 Important Notice: 1) `mad`, `mean`, `median`, `std`, `var` functions
                      shadow core Octave's respective functions prior
                      to Octave v9.1
                   2) incompatibility with the `nan` package
 New functions:
 ==============

 ** editDistance

 Improvements:
 =============