@@ -479,6 +479,9 @@
 
  ** PiecewiseLinearDistribution: fix truncated `mean`, `std`, and `var` methods
 
+ ** fillmissing:  combining `movmedian` method and `missinglocation` option
+                  no longer ignores non-NaN values.
+
  ** various fixes to avoid errors when testing the package functions
 
 
